[WPE][GTK] Wrong rendering when using opacity filters on hw accelerated layers https://bugs.webkit.org/show_bug.cgi?id=221330

Reviewed by Carlos Garcia Campos.

Source/WebCore:

Apply the opacity filter value to the color components as well, as we need premultiplied alpha
for blending.

Covered by existent tests.

* platform/graphics/texmap/TextureMapperShaderProgram.cpp:

LayoutTests:

Update expected image.

* platform/gtk/css3/filters/effect-opacity-hw-expected.png:


Canonical link: https://commits.webkit.org/233689@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272361 268f45cc-cd09-0410-ab3c-d52691b4dbfc